docs: add JavaDoc to Entity-DTO converters